Give bullet frames the right style context parent.  Bug 387219, r+sr+a=dbaron